welcome.lessons.welcome.variables.Variables.scala.code
var x = 0;
while(!estSurBaggle())
{
	avance();
	x = x + 1;
}
prendBiscuit();
while(x != 0)
{
	recule();
	x = x - 1;
}
poseBiscuit();